--- a/src/molecules/Graph/styles.module.scss
+++ b/src/molecules/Graph/styles.module.scss
@@ -1,7 +1,3 @@
-.Page404 {
-	width:100vw;
-	height: 100vh;
-	background: rgba(217, 30, 24, .5) url('../../assets/images/pages-bg/404-page.png') no-repeat;
-	background-size: 20%;
-	background-position: center center;
+.graph {
+	background: white;
 }
