--- a/src/organisms/SignIn/styles.module.scss
+++ b/src/organisms/SignIn/styles.module.scss
@@ -1,41 +1,49 @@
 .formWrapper {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate( -50%, -50%);
+	box-shadow: 0 0 8px #171923;
+
 	width: 400px;
 	height: auto;
 	display: flex;
 	flex-direction: column;
-	padding: 50px 20px 50px 20px;
-	background: darkslategrey;
+	padding: 50px 20px 20px 20px;
+	background: #2D3748;
 	color: white;
 	margin: 0 auto;
-	margin-top: 15%;
 	text-align: center;
 	border-radius: 5px;
-
-	h2 {
-		font-weight: 500;
-		font-size: 25px;
-
-	}
 	
 	.form {
-		input {
-			color: black;
-			padding: 10px 5px 10px 5px;
-			height: 39px;
-			margin: 35px auto;
+		padding: 40px 0;
+
+		.btnGroup {
 			display: flex;
 			flex-direction: column;
-			border-radius: 5px;
+			.button {
+				background: #319795;
+				padding: 10px 0;
+				border-radius: 5px;
+				margin: 10px 0;
+				text-transform: uppercase;
+				font-size: 14px;
+				transition: .25s ease;
 
-		}
-		.button {
-			background: #000;
-			padding: 7px 45px;
-			border-radius: 5px;
-
-			&:hover {
-				background: rgba(0,0,0, .9);
+				&:hover {
+					background: #2C7A7B;
+				}
 			}
+		}
+	}
+
+	.linkWrapper {
+		display: flex;
+		justify-content: space-around;
+
+		.link {
+			color: #38B2AC;
 		}
 	}
 }
