--- a/src/molecules/HomeInputGroup/styles.module.scss
+++ b/src/molecules/HomeInputGroup/styles.module.scss
@@ -1,27 +1,9 @@
-.inputGroup {
-	width: 350px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 40px  auto 0 auto;
+.inputItem {
+	width: 170px;
 
-	.wrapperInput {
-		display: flex;
-		margin-bottom: 15px;
-
-		.customCheckbox {
-			margin-right: 10px;
-		}
-
-		.customInputDescription {
-			background: #2D3748;
-			border: 1px solid #718096;
-		}
-
-		.customInput {
-			background: transparent;
-			border: 1px solid #718096;
-			color: #718096;
-		}
+	h6 {
+		font-size: 14px;
+		margin-bottom: 10px;
+		text-align: left;
 	}
 }
