cleared console, solved problem

--- a/src/molecules/CurrentGroup/styles.module.scss
+++ b/src/molecules/CurrentGroup/styles.module.scss
@@ -3,6 +3,10 @@
   border-radius: 5px;
   padding: 0 0;
 
+  span {
+    font-size: 17px;
+  }
+
   .firstCurrentItem {
     padding: 4px 0;
     border-right: 1px solid #718096;
