--- a/src/organisms/MessageBox/styles.module.scss
+++ b/src/organisms/MessageBox/styles.module.scss
@@ -1,4 +1,10 @@
 .messageBoxWrapper {
+	padding: 10px 5px 10px 5px;
+	background: #2D3748;
+	border-radius: 5px;
+	max-height: 467px;
+	overflow: auto;
+
 	.messageBoxTitle {
 		margin-bottom: 10px;
 	}
@@ -9,22 +15,39 @@
 		border: 1px solid grey;
 		border-radius: 5px;
 		margin-bottom: 10px;
+		position: relative;
+
+		.numberCard {
+			font-size: 12px;
+			position: absolute;
+			top: 1px;
+			left: 5px;
+		}
 
 		.rightCardContent {
 			display: flex;
+			align-items: center;
 
 			.buyCircle {
-				padding: 20px;
+				padding: 20px 18px 20px 18px;
 				background: #6B46C1;
 				border-radius: 50%;
 				margin-right: 10px;
+				font-weight: bold;
 			}
 
 			.sellCircle {
-				padding: 20px;
+				padding: 20px 16px 20px 16px;
 				background: #C53030;
 				border-radius: 50%;
 				margin-right: 10px;
+				font-weight: bold;
+			}
+
+			.infoWrapper {
+				display: flex;
+				flex-direction: column;
+				align-items: flex-start;
 			}
 		}
 	}
