--- a/src/organisms/MessageBox/styles.module.scss
+++ b/src/organisms/MessageBox/styles.module.scss
@@ -7,18 +7,23 @@
 
 	.messageBoxTitle {
 		margin-bottom: 10px;
+		text-transform: uppercase;
+		font-weight: 500;
 	}
+
 	.cardWrapper {
+		background: #4A5568;
 		display: flex;
 		justify-content: space-between;
 		padding: 15px 10px;
-		border: 1px solid grey;
+		border: 1px solid #4A5568;
 		border-radius: 5px;
 		margin-bottom: 10px;
 		position: relative;
 
 		.numberCard {
 			font-size: 12px;
+			font-weight: 500;
 			position: absolute;
 			top: 1px;
 			left: 5px;
