--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,16 @@ body {
   padding: 0;
   margin: 0;
 }
-
+.apexcharts-menu.apexcharts-menu-open {
+  opacity: 1;
+  pointer-events: all;
+  transition: 0.15s ease all;
+  background: #272d38;
+}
+.apexcharts-theme-light .apexcharts-menu-item:hover {
+  background: #90cdf4;
+  color: black;
+}
 .App {
   text-align: center;
 }
