update styles & add status block home page

--- a/src/organisms/MessageBox/styles.module.scss
+++ b/src/organisms/MessageBox/styles.module.scss
@@ -35,7 +35,7 @@
 
 			.buyCircle {
 				padding: 20px 18px 20px 18px;
-				background: #6B46C1;
+				background: #2F855A;
 				border-radius: 50%;
 				margin-right: 10px;
 				font-weight: bold;
