update logic home page data

--- a/src/molecules/CounterGroup/styles.module.scss
+++ b/src/molecules/CounterGroup/styles.module.scss
@@ -3,6 +3,11 @@
   border-radius: 5px;
   padding: 0 0;
 
+  .counterInput {
+    background: transparent;
+    text-align: center;
+  }
+
   .firstCounter {
     background: #2F855A;
     padding: 7px 0;
