update logic home page data socket and messages

--- a/src/molecules/CurrentGroup/styles.module.scss
+++ b/src/molecules/CurrentGroup/styles.module.scss
@@ -7,6 +7,11 @@
     font-size: 17px;
   }
 
+  .currentInput {
+    background: transparent;
+    text-align: center;
+  }
+
   .firstCurrentItem {
     padding: 4px 0;
     border-right: 1px solid #718096;
