add CurrencyPairs & Demo Tool

--- a/src/templates/Home-template/styles.module.scss
+++ b/src/templates/Home-template/styles.module.scss
@@ -15,6 +15,10 @@
       margin-top: 50px;
       display: flex;
       justify-content: center;
+
+      .currencyPairsItem {
+        margin-right: 10px;
+      }
     }
   }
 
