--- a/src/atoms/CurrencyPairs/styles.module.scss
+++ b/src/atoms/CurrencyPairs/styles.module.scss
@@ -1,6 +1,18 @@
 .wrapperCurrencyInput {
+  width: 150px;
   .currencyTitle {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family:
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      'Roboto',
+      'Oxygen',
+      'Ubuntu',
+      'Cantarell',
+      'Fira Sans',
+      'Droid Sans',
+      'Helvetica Neue',
+      sans-serif;
     color: aliceblue;
     margin-bottom: 10px;
     font-size: 14px;
