--- a/src/molecules/ButtonGroup/styles.module.scss
+++ b/src/molecules/ButtonGroup/styles.module.scss
@@ -4,10 +4,11 @@
 	margin-top: 40px;
 
 	.btnStart {
-		margin-right: 40px;
+		margin-right: 30px;
 	}
-	.buttonStop {
-		margin-left: 40px;
+	.buttonExtraStop {
+		margin-left: 30px;
+		margin-right: 30px;
 		border-color: brown;
 		border-width: 2px;
 		color: brown;
