--- a/src/templates/Home-template/styles.module.scss
+++ b/src/templates/Home-template/styles.module.scss
@@ -20,6 +20,12 @@
         margin-right: 10px;
       }
     }
+
+    .bottomBlock {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+    }
   }
 
   .rightContent {
