--- a/src/molecules/CurrentGroup/styles.module.scss
+++ b/src/molecules/CurrentGroup/styles.module.scss
@@ -10,6 +10,15 @@
   .currentInput {
     background: transparent;
     text-align: center;
+    font-family:
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",Helvetica,
+      Arial,sans-serif,
+      "Apple Color Emoji",
+      "Segoe UI Emoji",
+      "Segoe UI Symbol";
+    font-weight: 500;
   }
 
   .firstCurrentItem {
